--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.1",
-    "@angular/cli": "~16.0.1",
+    "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/jspdf": "^2.0.0",
